--- a/index.html
+++ b/index.html
@@ -10,25 +10,25 @@
     <div class="contenedor">
         <div id="menu">
             <div class="boton" id="boton_trucos">
-                <img src="recursos/tres lineas.png" alt=""> <p class="texto">Trucos</p>
+                <img src="tres lineas.png" alt=""> <p class="texto">Trucos</p>
             </div>
             <div class="boton" id="autos">
-                <img src="recursos/transporte.png" alt=""> <p class="texto">Transporte</p>
+                <img src="transporte.png" alt=""> <p class="texto">Transporte</p>
             </div>
             <div class="boton" id="salud">
-                <img src="recursos/salud.png" alt=""> <p class="texto">Salud</p>
+                <img src="salud.png" alt=""> <p class="texto">Salud</p>
             </div>
             <div class="boton" id="armas">
-                <img src="recursos/armas.png" alt=""> <p class="texto">Armas</p>
+                <img src="armas.png" alt=""> <p class="texto">Armas</p>
             </div>
             <div class="boton" id="habilidades">
-                <img src="recursos/habilidades.png" alt=""> <p class="texto">Habilidades</p>
+                <img src="habilidades.png" alt=""> <p class="texto">Habilidades</p>
             </div>
             <div class="boton" id="busqueda">
-                <img src="recursos/estrellas.png" alt=""> <p class="texto">Busqueda</p>
+                <img src="estrellas.png" alt=""> <p class="texto">Busqueda</p>
             </div>
             <div class="boton" id="entorno">
-                <img src="recursos/ciudad.png" alt=""> <p class="texto">Entorno</p>
+                <img src="ciudad.png" alt=""> <p class="texto">Entorno</p>
             </div>
         </div>
         <div class="claves" id="claves">
